# v1

./: .gitignore  Anchor.toml  DEPLOY_VERCEL.md  LICENSE  README.md  middleware.ts  next.config.cjs  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  metadata.ts  page.tsx  providers.tsx
components/: borrow-loan-creation.tsx  client-layout.tsx  cta-section.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  home-page.tsx  hydration-boundary.tsx  lend-loan-creation.tsx  loan-creation.tsx  loan-offers.tsx  mode-toggle.tsx  notification-center.tsx  onboarding-flow.tsx  particles-background.tsx  performance-monitor.tsx  platform-stats-section.tsx  providers.tsx  referral-program.tsx  risk-assessment.tsx  settings-dialog.tsx  social-feed.tsx  stats-section.tsx  testimonials-section.tsx  theme-provider.tsx  theme-toggle.tsx  wallet-connect-modal.tsx  wallet-connect.tsx  wallet-provider.tsx
config/: solana.ts  wallet-config.ts
constants/: security.ts  validation.ts
hooks/: useLoanContract.ts  useLoanForm.ts  useSecurity.ts  useTokenPrices.ts  useValidation.ts  useWalletTokens.ts
lib/: utils.ts
middleware/: rate-limit.ts  validation.ts
programs-loan/: Anchor.toml
programs/loan/: Anchor.toml  Cargo.toml
programs/loan/programs/loan/: Cargo.toml
programs/loan/programs/loan/src/: lib.rs
programs/loan/src/: lib.rs
programs/loan/tests/: loan.js
providers/: wallet-provider.tsx
schemas/: loan.ts
types/: global.d.ts  loan.ts
(+47 files in other folders)
